--- a/src/app.css
+++ b/src/app.css
@@ -74,6 +74,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 	dark theme colors */
     --black: #000000;
     --dark: #121212;
+    --grey: #8C8C8C;
     --background-surface: #121212;
     /* 
     breakpoints */
@@ -110,6 +111,9 @@ FONT COLOURS
 }
 .color-secondary {
     color: var(--secondary);
+}
+.color-grey {
+    color: var(--grey);
 }
 .color-red {
     color: var(--red);
@@ -401,13 +405,13 @@ button {
     border: none !important;
     /* 
     general button design, */
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 3.5px;
+    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); */
+    /* padding: 5px 10px !important; */
+    /* border-radius: 3.5px; */
     opacity: 1;
     cursor: pointer;
     transition: all 0.3s ease;
     align-items: center;
-    padding: 5px 10px !important;
     /* 
     fonts */
     white-space: nowrap;
