Feature/cross platform header dynamix lang change (#30)
* adding the functionality to the header, making sub-header

* adding the language-selection, dynamic-routing and localstorage with header nav options for the user

* updating the @apollo/client/core packages for sveltekit

* switching graph-ql client to graph-ql-request for sveltekit-compatability

* fixing the package.json and package-lock.json modules

* updating the stores menthod and dynamic language URL change

* merging changes

* updating header for rowser support

* correct
ew-stats-platform-header

* udpating the side-nav mobile view

* updating the header with new data, setting out layout for the sports-btn and the correct drop-down menus for the data

* updating the variables data

--- a/src/app.css
+++ b/src/app.css
@@ -245,6 +245,9 @@ right-margins
 .m-r-10 {
     margin-right: 10px;
 }
+.m-r-15 {
+    margin-right: 15px;
+}
 .m-r-20 {
     margin-right: 20px;
 }
@@ -382,6 +385,12 @@ GRID / COLUMN DISPLAY */
 .column-start-grid {
     display: grid;
     justify-content: center;
+}
+.column-start-grid-start {
+    display: grid;
+    width: 100%;
+    /* justify-content: start; */
+    justify-items: start;
 }
 
 /* page dividers */
