--- a/src/app.css
+++ b/src/app.css
@@ -18,9 +18,9 @@
 
 body,
 html {
-    margin: 0 !important;
-    background-color: var(--white);
-    scroll-behavior: smooth !important;
+	margin: 0 !important;
+	background-color: var(--white);
+	scroll-behavior: smooth !important;
 }
 
 h1,
@@ -29,26 +29,26 @@ h3,
 h4,
 h5,
 h6 {
-    /* margin: 0 0 0.5em 0; */
-    font-weight: 400;
-    line-height: 1.2;
+	/* margin: 0 0 0.5em 0; */
+	font-weight: 400;
+	line-height: 1.2;
 }
 
 body {
-    color: var(--black);
-    background-color: var(--white);
-    margin: 0 !important;
-    font-family: Roboto;
-    font-size: 14px;
-    line-height: 1.5;
-    /* 
+	color: var(--black);
+	background-color: var(--white);
+	margin: 0 !important;
+	font-family: Roboto;
+	font-size: 14px;
+	line-height: 1.5;
+	/* 
     MOBILE 
     disable pinchin & user zooming on */
-    touch-action: pan-x pan-y;
+	touch-action: pan-x pan-y;
 }
 
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 /* ==========================
@@ -59,44 +59,44 @@ body {
 /* to learn more -> 
 https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 :root {
-    /* 
+	/* 
     dimensions */
-    --app-height: 100%;
-    /* 
+	--app-height: 100%;
+	/* 
 	main app colors */
-    --white: #ffffff;
-    --primary: #F5620F;
-    --secondary: #37474F;
-    --blue: #0085FF;
-    --red: #C62828;
-    --theme-color: #e3e3e3;
-    /* 
+	--white: #ffffff;
+	--primary: #f5620f;
+	--secondary: #37474f;
+	--blue: #0085ff;
+	--red: #c62828;
+	--theme-color: #e3e3e3;
+	/* 
 	dark theme colors */
-    --black: #000000;
-    --dark: #121212;
-    --grey: #8C8C8C;
-    --background-surface: #121212;
-    --dark-theme: #292929;
-    --dark-theme-1: #4B4B4B;
-    /* 
+	--black: #000000;
+	--dark: #121212;
+	--grey: #8c8c8c;
+	--background-surface: #121212;
+	--dark-theme: #292929;
+	--dark-theme-1: #4b4b4b;
+	/* 
     breakpoints */
-    --mobile: 375;
-    --tablet: 767;
-    --desktop: 1440;
+	--mobile: 375;
+	--tablet: 767;
+	--desktop: 1440;
 }
 
 a {
-    text-decoration: none !important;
-    color: inherit;
-    display: flex;
+	text-decoration: none !important;
+	color: inherit;
+	display: flex;
 }
 
 p {
 	font-style: normal;
 	font-weight: 400; /* 400 / 500 */
 	line-height: 150%;
-    margin: 0;
-    color: var(--dark);
+	margin: 0;
+	color: var(--dark);
 }
 
 /* ==========================
@@ -109,67 +109,68 @@ p {
 FONT COLOURS 
 */
 .color-primary {
-    color: #F5620F !important;
+	color: #f5620f !important;
 }
 .color-secondary {
-    color: var(--secondary);
+	color: var(--secondary);
 }
 .color-grey {
-    color: var(--grey);
+	color: var(--grey);
 }
 .color-red {
-    color: var(--red);
+	color: var(--red);
 }
 .color-white {
-    color: var(--white)
+	color: var(--white);
 }
 .color-blue {
-    color: var(--blue);
+	color: var(--blue);
 }
 .color-blue-green-gradient {
-    background: -webkit-linear-gradient(rgba(0, 255, 117, 1), rgba(0, 163, 255, 1));
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+	background: -webkit-linear-gradient(rgba(0, 255, 117, 1), rgba(0, 163, 255, 1));
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 .color-error {
-    color: #FF0000;
+	color: #ff0000;
 }
 .color-success {
-    color: #009406
+	color: #009406;
 }
 /* 
 ~~~~~~~~~~~~
 FONT EXTRA STYLES 
 */
 .no-wrap {
-    white-space: nowrap;
+	white-space: nowrap;
 }
 .underline {
-    text-decoration: underline !important;
+	text-decoration: underline !important;
 }
 .bold {
-    font-style: normal;
-    font-weight: bold;
-} .not-bold {
-    font-weight: normal;
+	font-style: normal;
+	font-weight: bold;
+}
+.not-bold {
+	font-weight: normal;
 }
 .uppercase {
-    text-transform: uppercase;
+	text-transform: uppercase;
 }
 .text-center {
-    text-align: center;
-    text-align: -webkit-center;
+	text-align: center;
+	text-align: -webkit-center;
 }
 /* 
 ~~~~~~~~~~~~
 FONT WEIGHT 
 */
 .w-400 {
-    font-weight: 400;
+	font-weight: 400;
 }
 .w-500 {
-    font-weight: 500;
+	font-weight: 500;
 }
 /* 
 ~~~~~~~~~~~~
@@ -177,23 +178,23 @@ FONT SIZES
 	font-size: calc(100vw / (var(--mobile) / 10));
 */
 .s-10 {
-    font-size: 10px;
+	font-size: 10px;
 }
 .s-12 {
 	font-size: 12px;
 }
 .s-14 {
 	font-size: 14px;
-} 
+}
 .s-16 {
 	font-size: 16px;
-} 
+}
 .s-18 {
 	font-size: 18px;
 }
 .s-20 {
 	font-size: 20px;
-} 
+}
 .s-22 {
 	font-size: 22px;
 }
@@ -204,76 +205,76 @@ FONT SIZES
 .x-large,
 p.x-large,
 span.x-large {
-    font-size: 18px;
+	font-size: 18px;
 }
-.large, 
+.large,
 p.large,
 span.large {
-    font-size: 16px;
-} 
+	font-size: 16px;
+}
 .medium,
 p.medium,
 span.medium {
-    font-size: 14px;
-} 
+	font-size: 14px;
+}
 .small,
-p.small { 
-    font-size: 12px;
+p.small {
+	font-size: 12px;
 }
 .s_small,
-p.s_small { 
-    font-size: 12px;
+p.s_small {
+	font-size: 12px;
 }
 
 /* 
 page titles */
 .s-42 {
-    font-size: 42px;
-    /* margin-bottom: calc(100vw / (var(--mobile) / 26)); */
+	font-size: 42px;
+	/* margin-bottom: calc(100vw / (var(--mobile) / 26)); */
 }
 
 @media only screen and (min-width: 768px) {
-    .s-t-16 {
-        font-size: 16px;
-    }
+	.s-t-16 {
+		font-size: 16px;
+	}
 }
 
 /* ##########################
     DEFAULT MARGIN STYLES
 ########################## */
 .m-0 {
-    margin: 0;
+	margin: 0;
 }
 /* 
 ~~~~~~~~~~
 top-margins 
 */
 .m-t-10 {
-    margin-top: 10px;
+	margin-top: 10px;
 }
 .m-t-15 {
-    margin-top: 15px;
+	margin-top: 15px;
 }
 .m-t-20 {
-    margin-top: 20px;
+	margin-top: 20px;
 }
 .m-t-25 {
-    margin-top: 25px;
+	margin-top: 25px;
 }
 .m-t-30 {
-    margin-top: 30px;
+	margin-top: 30px;
 }
 .m-t-35 {
-    margin-top: 35px;
+	margin-top: 35px;
 }
 .m-t-40 {
-    margin-top: 40px;
+	margin-top: 40px;
 }
 .m-t-45 {
-    margin-top: 45px;
+	margin-top: 45px;
 }
 .m-t-80 {
-    margin-top: 80px;
+	margin-top: 80px;
 }
 
 /* 
@@ -281,28 +282,28 @@ top-margins
 right-margins 
 */
 .m-r-5 {
-    margin-right: 5px;
+	margin-right: 5px;
 }
 .m-r-8 {
-    margin-right: 8px;
+	margin-right: 8px;
 }
 .m-r-10 {
-    margin-right: 10px;
+	margin-right: 10px;
 }
 .m-r-15 {
-    margin-right: 15px;
+	margin-right: 15px;
 }
 .m-r-16 {
-    margin-right: 16px;
+	margin-right: 16px;
 }
 .m-r-20 {
-    margin-right: 20px;
+	margin-right: 20px;
 }
 .m-r-24 {
-    margin-right: 24px;
+	margin-right: 24px;
 }
 .m-r-30 {
-    margin-right: 30px;
+	margin-right: 30px;
 }
 
 /* 
@@ -310,40 +311,40 @@ right-margins
 bottom-margins 
 */
 .m-b-5 {
-    margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 .m-b-8 {
-    margin-bottom: 8px;
+	margin-bottom: 8px;
 }
 .m-b-10 {
-    margin-bottom: 10px;
+	margin-bottom: 10px;
 }
 .m-b-12 {
-    margin-bottom: 12px;
+	margin-bottom: 12px;
 }
 .m-b-15 {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
 .m-b-16 {
-    margin-bottom: 16px;
+	margin-bottom: 16px;
 }
 .m-b-20 {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
 .m-b-25 {
-    margin-bottom: 25px;
+	margin-bottom: 25px;
 }
 .m-b-30 {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 .m-b-35 {
-    margin-bottom: 35px;
+	margin-bottom: 35px;
 }
 .m-b-40 {
-    margin-bottom: 40px;
+	margin-bottom: 40px;
 }
 .m-b-55 {
-    margin-bottom: 55px;
+	margin-bottom: 55px;
 }
 
 /* 
@@ -352,9 +353,8 @@ left-margins
 */
 
 .m-l-8 {
-    margin-left: 8px;
+	margin-left: 8px;
 }
-
 
 /*
 ##########################
@@ -363,110 +363,110 @@ left-margins
 */
 
 section {
-    min-height: calc(100vh - 128px);
-    padding: 22px 16px;
-    margin: auto;
+	min-height: calc(100vh - 128px);
+	padding: 22px 16px;
+	margin: auto;
 }
 @media only screen and (min-width: 768px) {
-    section {
-        padding: 26px 34px;
-        margin: auto;
-    }
+	section {
+		padding: 26px 34px;
+		margin: auto;
+	}
 }
 @media only screen and (min-width: 1025px) {
-    section {
-        padding: 26px 34px;
-        margin: auto;
-    }
+	section {
+		padding: 26px 34px;
+		margin: auto;
+	}
 }
 
 /* FLEX DISPLAY */
 .row-space-out {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: space-between;
+	width: 100%;
+	flex-direction: row;
+	flex-wrap: nowrap;
 }
 .row-space-even {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-evenly;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: space-evenly;
+	width: 100%;
+	flex-direction: row;
+	flex-wrap: nowrap;
 }
 .row-space-start {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: start;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: start;
+	width: 100%;
+	flex-direction: row;
+	flex-wrap: nowrap;
 }
 .row-space-center {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	width: 100%;
+	flex-direction: row;
+	flex-wrap: nowrap;
 }
 
 /*
 ============
 GRID / COLUMN DISPLAY */
 .column-space-center {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	width: 100%;
+	flex-direction: column;
+	flex-wrap: nowrap;
 }
 .column-space-start {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: flex-start;
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: flex-start;
+	width: 100%;
+	flex-direction: column;
+	flex-wrap: nowrap;
 }
 .column-space-stretch {
-    display: flex;
-    align-content: center;
-    width: 100%;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    justify-content: center;
+	display: flex;
+	align-content: center;
+	width: 100%;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: stretch;
+	justify-content: center;
 }
 .column-start-grid {
-    display: grid;
-    justify-content: center;
+	display: grid;
+	justify-content: center;
 }
 .column-start-grid-start {
-    display: grid;
-    width: 100%;
-    /* justify-content: start; */
-    justify-items: start;
+	display: grid;
+	width: 100%;
+	/* justify-content: start; */
+	justify-items: start;
 }
 
 /* page dividers */
 
 hr {
-    width: 100%;
-    margin: 16.17px 0;
-    opacity: 0.25;
-    border: 1.46983px solid #FF5555;
-    background-color: #FF5555;
+	width: 100%;
+	margin: 16.17px 0;
+	opacity: 0.25;
+	border: 1.46983px solid #ff5555;
+	background-color: #ff5555;
 }
 
 /* ==========================
@@ -474,77 +474,85 @@ hr {
 ========================== */
 
 button {
-    /* 
+	/* 
     removing pre-set CSS, */
-    outline: none !important;
-    border: none !important;
-    /* 
+	outline: none !important;
+	border: none !important;
+	/* 
     general button design, */
-    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); */
-    /* padding: 5px 10px !important; */
-    /* border-radius: 3.5px; */
-    opacity: 1;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    align-items: center;
-    /* 
+	/* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); */
+	/* padding: 5px 10px !important; */
+	/* border-radius: 3.5px; */
+	opacity: 1;
+	cursor: pointer;
+	transition: all 0.3s ease;
+	align-items: center;
+	/* 
     fonts */
-    white-space: nowrap;
-    /* 
+	white-space: nowrap;
+	/* 
     for the icons separation */
-    display: flex;
-    justify-content: center;
-} button p {
-    font-weight: 400;
-} button:disabled {
-    cursor: default;
+	display: flex;
+	justify-content: center;
+}
+button p {
+	font-weight: 400;
+}
+button:disabled {
+	cursor: default;
 }
 /* 
 ~~~~~~~~~~~~~
 BUTTON STYLES 
 */
 .btn-primary {
-    background: var(--primary);
-} .btn-primary p {
-    color: var(--white);
+	background: var(--primary);
+}
+.btn-primary p {
+	color: var(--white);
 }
 
 .btn-secondary {
-    background: var(--secondary);
-} .btn-secondary p {
-    color: var(--white);
+	background: var(--secondary);
+}
+.btn-secondary p {
+	color: var(--white);
 }
 
 .btn-blue {
-    background-color: var(--blue);
-} .btn-blue p {
-    color: var(--white);
-} .btn-blue:hover {
-    background-color: var(--white);
-} .btn-blue:hover p {
-    color: var(--secondary);
+	background-color: var(--blue);
+}
+.btn-blue p {
+	color: var(--white);
+}
+.btn-blue:hover {
+	background-color: var(--white);
+}
+.btn-blue:hover p {
+	color: var(--secondary);
 }
 
 .btn-white {
-    background-color: var(--white);
-} .btn-white p {
-    color: var(--black);
+	background-color: var(--white);
+}
+.btn-white p {
+	color: var(--black);
 }
 /* 
 ~~~~~~~~~~~~~
 BUTTON ICON IMG
 */
-.btn-right-icon  {
-    padding: 5px 45px 5px 6px !important;
-    background-position: right 11px top 50%;
-    background-size: 16.17px 16.17px;
-    background-repeat: no-repeat;
+.btn-right-icon {
+	padding: 5px 45px 5px 6px !important;
+	background-position: right 11px top 50%;
+	background-size: 16.17px 16.17px;
+	background-repeat: no-repeat;
 }
 .btn-left-icon {
-    padding: 5px 6px 5px 37px !important;
-    background-position: left 11px top 50%;
-    background-size: 16.17px 16.17px;
-    background-repeat: no-repeat;
+	padding: 5px 6px 5px 37px !important;
+	background-position: left 11px top 50%;
+	background-size: 16.17px 16.17px;
+	background-repeat: no-repeat;
 }
 
 /* 
@@ -552,30 +560,30 @@ INPUT FORM CSS STYLE
 */
 
 form fieldset {
-    outline: none;
-    border: none;
-    padding: 0;
-    margin: 0;
+	outline: none;
+	border: none;
+	padding: 0;
+	margin: 0;
 }
-form input, 
+form input,
 form select {
-    outline: none;
-    border: none;
-    opacity: 1;
-    cursor: text;
-    align-items: center;
-    text-align: start;
-    display: flex;
-    transition: all 0.15s ease;
-    background: #FFFFFF;
-    border: 0.5px solid #37474F;
-    box-sizing: border-box;
-    border-radius: 7.34914px;
-    padding: 7px;
+	outline: none;
+	border: none;
+	opacity: 1;
+	cursor: text;
+	align-items: center;
+	text-align: start;
+	display: flex;
+	transition: all 0.15s ease;
+	background: #ffffff;
+	border: 0.5px solid #37474f;
+	box-sizing: border-box;
+	border-radius: 7.34914px;
+	padding: 7px;
 }
 input:focus {
-    padding: 5px;
-    border: 2.5px solid #FF5555;
+	padding: 5px;
+	border: 2.5px solid #ff5555;
 }
 
 /* 
@@ -585,30 +593,54 @@ ANIMATIONS FORM CSS STYLE
 */
 
 @keyframes flickerAnimation {
-    0%   { opacity: 1; }
-    50%  { opacity: 0.25; }
-    100% { opacity: 1; }
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.25;
+	}
+	100% {
+		opacity: 1;
+	}
 }
-@-o-keyframes flickerAnimation{
-    0%   { opacity: 1; }
-    50%  { opacity: 0.25; }
-    100% { opacity: 1; }
+@-o-keyframes flickerAnimation {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.25;
+	}
+	100% {
+		opacity: 1;
+	}
 }
-@-moz-keyframes flickerAnimation{
-    0%   { opacity: 1; }
-    50%  { opacity: 0.25; }
-    100% { opacity: 1; }
+@-moz-keyframes flickerAnimation {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.25;
+	}
+	100% {
+		opacity: 1;
+	}
 }
-@-webkit-keyframes flickerAnimation{
-    0%   { opacity: 1; }
-    50%  { opacity: 0.25; }
-    100% { opacity: 1; }
+@-webkit-keyframes flickerAnimation {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.25;
+	}
+	100% {
+		opacity: 1;
+	}
 }
 .animation-target {
-    -webkit-animation: flickerAnimation 1.5s infinite;
-    -moz-animation: flickerAnimation 1.5s infinite;
-    -o-animation: flickerAnimation 1.5s infinite;
-        animation: flickerAnimation 1.5s infinite;
+	-webkit-animation: flickerAnimation 1.5s infinite;
+	-moz-animation: flickerAnimation 1.5s infinite;
+	-o-animation: flickerAnimation 1.5s infinite;
+	animation: flickerAnimation 1.5s infinite;
 }
 
 /* 
@@ -618,12 +650,12 @@ DARK-MODE FORM CSS STYLE
 */
 
 .dark-background {
-    background-color: var(--dark-theme) !important;
+	background-color: var(--dark-theme) !important;
 }
 .dark-background-1 {
-    background-color: var(--dark-theme-1) !important;
+	background-color: var(--dark-theme-1) !important;
 }
 
 .dark-background-1 .color-grey {
-    color: #A8A8A8 !important;
+	color: #a8a8a8 !important;
 }
