--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@
     https://stackoverflow.com/questions/38723246/google-font-not-working-with-css
 ========================== */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 
 /* @font-face {
     font-family: 'Roboto Slab', serif;
@@ -378,6 +378,7 @@ left-margins
 section {
 	min-height: calc(100vh - 128px);
 	padding: 22px 16px;
+	padding-bottom: 100px !important;
 	margin: auto;
 }
 @media only screen and (min-width: 768px) {
