--- a/src/app.css
+++ b/src/app.css
@@ -247,6 +247,12 @@ page titles */
 	.s-t-16 {
 		font-size: 16px;
 	}
+
+	.large,
+	p.large,
+	span.large {
+		font-size: 18px;
+	}
 }
 
 /* ##########################
@@ -510,7 +516,7 @@ button {
 	justify-content: center;
 }
 button p {
-	font-weight: 400;
+	/* font-weight: 400; */
 }
 button:disabled {
 	cursor: default;
