--- a/src/app.css
+++ b/src/app.css
@@ -169,6 +169,9 @@ FONT EXTRA STYLES
 .place-center {
 	place-self: center;
 }
+.cursor-pointer {
+	cursor: pointer;
+}
 /* 
 ~~~~~~~~~~~~
 FONT WEIGHT 
@@ -370,6 +373,10 @@ bottom-margins
 ~~~~~~~~~~
 left-margins 
 */
+
+.m-l-10 {
+	margin-left: 10px;
+}
 
 .m-l-8 {
 	margin-left: 8px;
