--- a/src/app.css
+++ b/src/app.css
@@ -36,7 +36,7 @@ h6 {
 
 body {
 	color: var(--black);
-	background-color: var(--white);
+	background-color: var(--whitev2);
 	margin: 0 !important;
 	font-family: Roboto;
 	font-size: 14px;
@@ -65,6 +65,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 	/* 
 	main app colors */
 	--white: #ffffff;
+	--whitev2: #F2F2F2;
 	--primary: #f5620f;
 	--secondary: #37474f;
 	--blue: #0085ff;
@@ -96,7 +97,7 @@ p {
 	font-weight: 400; /* 400 / 500 */
 	line-height: 150%;
 	margin: 0;
-	color: var(--dark);
+	color: var(--dark-theme);
 }
 
 /* ==========================
