--- a/src/app.css
+++ b/src/app.css
@@ -687,3 +687,11 @@ DARK-MODE FORM CSS STYLE
 .dark-background-1 .color-grey {
 	color: #a8a8a8 !important;
 }
+
+/* ... MOBILE VIEW OVERFLOW HIDDEN ... */
+
+@media only screen and (max-width: 375px) {
+	html, body {
+		overflow-x: hidden;
+	}
+}
