--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,7 @@ body {
 	/* 
     MOBILE 
     disable pinchin & user zooming on */
-	touch-action: pan-x pan-y;
+	/* touch-action: pan-x pan-y; */
 }
 
 * {
