Feature/standings fixtures odds widget (#593)
* Updating `fixtures_odds` & `hasura` types

* New `fixtures_odds` query generation

* Updating `fixtures_odds` types

* Updating `fixtures_odds` types

* Updating `fixtures_odds` query

* Updating `fixtures_odds` query

* Updating `round` & `weeks` data types

* Updating `package-lock`

* Stable `fixtures_odds` release `api` endpoints for `redis` cache generation

* Updating `types` and `finalObj` cache push

* Updating `debug` logs for `cache`

* Adding `fixtures_odds` widget & `page` tournaments

* Updating `fixture_odds` id type field

* Updating to include `time`

* Udpating `fixtures_odds` cache update (all)

* Udpating `fixtures_odds` cache update (all)

* Udpating `fixtures_odds` cache update (all)

* Updating `pagination` fix

* Reveritng `packages` in `npm`

* Stable `v.0.5` of `fixtures-odds` release `/<lang>` based

* Updating `mon-sun` default each `week` fixtures

* Updating `mon-sun` default each `week` fixtures

* Updating `inclusive` week

* Updating `rounds` view and `in/decrement`

* Centering `text`

* `Mobile` styling & `dark-theme` addition

* `Fixtures_Odds` content-loader

* Creating `livescores_now` firebase `types`

* Stable `fixtures_odds` livescores_now `listen-real-time`

* Updating `styles` for `live` red fixtures

* Adding `validation` safeguards + `comments`

* Updating `states` and `re-loading`

* Updating `fields` & `types` for project `cache`

* Updating `dropdown` select

* Adding to `EN` widget `fixtures_odds`

* Updating `widget` styles

* Updating `fixtures_odds` types & `SEO` handling

* Updating `fixtures_odds` types & `SEO` handling `cont.`

* Updating `comments`

* Updating `validation` checks & `console`

* Updating `real-time` capability tracking enhance

* Updating `order` of fixtures in a day

* Updating `client offline` firebase error

* Update `HT` display

* Updating `reactivity` of `l

--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 	--secondary: #37474f;
 	--blue: #0085ff;
 	--red: #c62828;
+  --red-bright: #FF3C3C;
 	--theme-color: #e3e3e3;
 	/* 
 	dark theme colors */
@@ -148,6 +149,9 @@ FONT COLOURS
 }
 .color-red {
 	color: var(--red);
+}
+.color-red-bright {
+	color: var(--red-bright) !important;
 }
 .color-white {
 	color: var(--white);
@@ -415,6 +419,10 @@ left-margins
 
 .m-l-8 {
 	margin-left: 8px;
+}
+
+.m-l-24 {
+	margin-left: 24px;
 }
 
 /*
