feat: update app.css;

--- a/src/app.css
+++ b/src/app.css
@@ -61,6 +61,7 @@ https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
   --red-bright: #FF3C3C;
 	--theme-color: #e3e3e3;
   --grey-color: #E6E6E6;
+  --grey-shade: #CCCCCC;
 	/* 
 	dark theme colors */
 	--black: #000000;
