feat: #1055 (cont) + dark + triggers + cal-mobile;

--- a/src/app.css
+++ b/src/app.css
@@ -183,7 +183,7 @@ FONT COLOURS
 	color: var(--secondary);
 }
 .color-grey {
-	color: var(--grey);
+	color: var(--grey) !important;
 }
 .color-red {
 	color: var(--red);
