Feature/issue-1158/football-player-fixtures (#1202)

--- a/src/app.css
+++ b/src/app.css
@@ -105,6 +105,7 @@ p {
 	--theme-color: #e3e3e3;
 	--grey-color: #e6e6e6;
 	--grey-shade: #cccccc;
+  --yellow-gold: #FFB904;
 	/* 
 	dark theme colors 
   */
@@ -222,6 +223,9 @@ FONT COLOURS
 .color-success {
 	color: #009406;
 }
+.color-yellow {
+	color: var(--yellow-gold);
+}
 
 /* 
 ~~~~~~~~~~~~
@@ -277,6 +281,9 @@ FONT WEIGHT
 }
 .w-500 {
 	font-weight: 500;
+}
+.w-700 {
+	font-weight: 700;
 }
 .w-normal {
 	font-weight: normal;
@@ -432,6 +439,9 @@ right-margins
 }
 .m-r-32 {
 	margin-right: 32px;
+}
+.m-r-64 {
+	margin-right: 64px;
 }
 
 /* 
@@ -736,8 +746,16 @@ BUTTON STYLES
 	border: 1px solid var(--primary) !important;
 	color: var(--primary);
 }
+/* variant (2) */
 .btn-hollow.danger {
 	border: 1px solid var(--red) !important;
+}
+/* variant (3) */
+.btn-hollow.cta {
+	border: 1px solid var(--primary) !important;
+} .btn-hollow.cta:hover {
+  background-color: var(--primary);
+	color: var(--white) !important;
 }
 
 /* 
