feat: #1195; update data; style; responsiveness;

--- a/static/app.css
+++ b/static/app.css
@@ -512,6 +512,9 @@ left-margins
 .m-l-24 {
 	margin-left: 24px;
 }
+.m-l-70 {
+  margin-left: 70px;
+}
 
 /* #endregion ➤ [MAIN] [MARGINS] Website Layout */
 
