chore: update global app.css;

--- a/static/app.css
+++ b/static/app.css
@@ -270,6 +270,9 @@ FONT EXTRA STYLES
 .display-none {
 	display: none !important;
 }
+.visibility-none {
+  visibility: hidden;
+}
 
 /* 
 ~~~~~~~~~~~~
