--- a/static/app.css
+++ b/static/app.css
@@ -38,11 +38,11 @@ body {
 	font-family: Roboto;
 	font-size: 14px;
 	line-height: 1.5;
-	/* 
-    MOBILE 
+	/*
+    MOBILE
     disable pinchin & user zooming on */
 	/* touch-action: pan-x pan-y; */
-	/* 
+	/*
     SAFARI */
 	-webkit-text-size-adjust: none;
 }
@@ -56,7 +56,7 @@ a {
 	color: inherit;
 	display: flex;
 }
-a.disable-anchor 
+a.disable-anchor
 {
   pointer-events: none;
 }
@@ -91,12 +91,12 @@ p {
 
 /* DOC:  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
 :root {
-	/* 
-  dimensions 
+	/*
+  dimensions
   */
 	--app-height: 100%;
-	/* 
-	main app colors 
+	/*
+	main app colors
   */
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
@@ -110,8 +110,8 @@ p {
 	--grey-color: #e6e6e6;
 	--grey-shade: #cccccc;
   --yellow-gold: #FFB904;
-	/* 
-	dark theme colors 
+	/*
+	dark theme colors
   */
 	--black: #000000;
 	--dark: #121212;
@@ -122,15 +122,15 @@ p {
   --dark-theme-1-shade: #616161;
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
-	/* 
+	/*
   breakpoints
-  NOTE: don't work with @media... 
+  NOTE: don't work with @media...
   */
 	--mobile: 375;
 	--tablet: 767;
 	--desktop: 1440;
-	/* 
-  other [fades] 
+	/*
+  other [fades]
   */
 	--oragne-pale-bg: rgba(247, 124, 66, 0.2);
 }
@@ -139,9 +139,9 @@ p {
 
 /* #region ➤ [MAIN] [FONT] [COLORS] [TEXT] Website Layout */
 
-/* 
+/*
 ~~~~~~~~~~~~
-HEADINGS 
+HEADINGS
 ~~~~~~~~~~~~
 */
 h1 {
@@ -180,9 +180,9 @@ h5 {
 	line-height: 150%;
 }
 
-/* 
+/*
 ~~~~~~~~~~~~
-FONT COLOURS 
+FONT COLOURS
 ~~~~~~~~~~~~
 */
 .color-primary {
@@ -231,9 +231,9 @@ FONT COLOURS
 	color: var(--yellow-gold);
 }
 
-/* 
+/*
 ~~~~~~~~~~~~
-FONT EXTRA STYLES 
+FONT EXTRA STYLES
 ~~~~~~~~~~~~
 */
 .no-wrap {
@@ -248,6 +248,9 @@ FONT EXTRA STYLES
 }
 .not-bold {
 	font-weight: normal;
+}
+.lowercase {
+	text-transform: lowercase;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -278,9 +281,9 @@ FONT EXTRA STYLES
   visibility: hidden;
 }
 
-/* 
+/*
 ~~~~~~~~~~~~
-FONT WEIGHT 
+FONT WEIGHT
 ~~~~~~~~~~~~
 */
 .w-400 {
@@ -296,9 +299,9 @@ FONT WEIGHT
 	font-weight: normal;
 }
 
-/* 
+/*
 ~~~~~~~~~~~~
-FONT SIZE 
+FONT SIZE
 ~~~~~~~~~~~~
 */
 .s-10 {
@@ -373,9 +376,9 @@ p.s_small {
 	margin: 0;
 }
 
-/* 
+/*
 ~~~~~~~~~~
-top-margins 
+top-margins
 ~~~~~~~~~~
 */
 .m-t-5 {
@@ -409,9 +412,9 @@ top-margins
 	margin-top: 80px;
 }
 
-/* 
+/*
 ~~~~~~~~~~
-right-margins 
+right-margins
 ~~~~~~~~~~
 */
 .m-r-5 {
@@ -454,9 +457,9 @@ right-margins
 	margin-right: 64px;
 }
 
-/* 
+/*
 ~~~~~~~~~~
-bottom-margins 
+bottom-margins
 ~~~~~~~~~~
 */
 .m-b-5 {
@@ -502,9 +505,9 @@ bottom-margins
 	margin-bottom: 55px;
 }
 
-/* 
+/*
 ~~~~~~~~~~
-left-margins 
+left-margins
 ~~~~~~~~~~
 */
 .m-l-5 {
@@ -518,6 +521,9 @@ left-margins
 }
 .m-l-24 {
 	margin-left: 24px;
+}
+.m-l-50 {
+  margin-left: 50px;
 }
 .m-l-70 {
   margin-left: 70px;
@@ -562,7 +568,7 @@ section {
 	}
 }
 
-/* 
+/*
 FLEX DISPLAYS
 */
 .row-space-out {
@@ -622,7 +628,7 @@ FLEX DISPLAYS
 
 /*
 ============
-GRID / COLUMN DISPLAY 
+GRID / COLUMN DISPLAY
 ============
 */
 .column-space-center {
@@ -667,15 +673,15 @@ GRID / COLUMN DISPLAY
 /* #region ➤ [MAIN] [BUTTONS] Website Layout */
 
 /* ==========================
-BUTTON STYLES 
+BUTTON STYLES
 ========================== */
 
 button {
-	/* 
+	/*
   removing pre-set CSS, */
 	outline: none !important;
 	border: none !important;
-	/* 
+	/*
   general button design, */
 	/* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25); */
 	/* padding: 5px 10px !important; */
@@ -684,10 +690,10 @@ button {
 	cursor: pointer;
 	transition: all 0.3s ease;
 	align-items: center;
-	/* 
+	/*
   fonts */
 	white-space: nowrap;
-	/* 
+	/*
   for the icons separation */
 	display: flex;
 	justify-content: center;
@@ -697,9 +703,9 @@ button {
 	cursor: default;
 }
 
-/* 
+/*
 ~~~~~~~~~~~~~
-BUTTON STYLES 
+BUTTON STYLES
 ~~~~~~~~~~~~~
 */
 .btn-primary {
@@ -771,7 +777,7 @@ BUTTON STYLES
 	color: var(--white) !important;
 }
 
-/* 
+/*
 ~~~~~~~~~~~~~
 BUTTON ICON IMG
 ~~~~~~~~~~~~~
@@ -851,7 +857,7 @@ BUTTON ICON IMG
 
 /*
 =============
-page dividers 
+page dividers
 =============
 */
 
@@ -863,9 +869,9 @@ hr {
 	background-color: #ff5555;
 }
 
-/* 
+/*
 =============
-INPUT FORM CSS STYLE 
+INPUT FORM CSS STYLE
 =============
 */
 
@@ -904,9 +910,9 @@ input:focus {
 
 /* #region ➤ [MAIN] [DARK MODE (OVERRIDES) STYLES] Website Layout */
 
-/* 
+/*
 =========================
-DARK-MODE FORM CSS STYLE 
+DARK-MODE FORM CSS STYLE
 =========================
 */
 
