--- a/static/app.css
+++ b/static/app.css
@@ -90,13 +90,14 @@ p {
 /* #region ➤ [MAIN] [ROOT] Layout */
 
 /* DOC:  https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
-:root {
+:root
+{
 	/*
-  dimensions
+  DIMENSIONS
   */
 	--app-height: 100%;
 	/*
-	main app colors
+	MAIN / LIGHT THEME COLORS
   */
 	--white: #ffffff;
 	--whitev2: #f2f2f2;
@@ -111,7 +112,7 @@ p {
 	--grey-shade: #cccccc;
   --yellow-gold: #FFB904;
 	/*
-	dark theme colors
+	DARK THEME COLORS
   */
 	--black: #000000;
 	--dark: #121212;
@@ -123,16 +124,18 @@ p {
   --dark-theme-1-2-shade: #737373;
   --dark-theme-1-3-shade: #999999;
 	/*
-  breakpoints
+  BREAKPOINTS
   NOTE: don't work with @media...
   */
 	--mobile: 375;
 	--tablet: 767;
 	--desktop: 1440;
 	/*
-  other [fades]
+  OTHER FADE COLORS
   */
 	--oragne-pale-bg: rgba(247, 124, 66, 0.2);
+
+  --header-is-mobile: false;
 }
 
 /* #endregion ➤ [MAIN] [ROOT] Layout */
@@ -719,10 +722,6 @@ button
 	display: flex;
 	justify-content: center;
 }
-button p
-{
-	/* font-weight: 400; */
-}
 button:disabled
 {
 	cursor: default;
@@ -957,11 +956,6 @@ form select
 	box-sizing: border-box;
 	border-radius: 7.34914px;
 	padding: 7px;
-}
-input:focus
-{
-	/* padding: 5px; */
-	/* border: 2.5px solid #ff5555; */
 }
 
 .width-auto
