--- a/static/app.css
+++ b/static/app.css
@@ -77,10 +77,17 @@ p {
 	}
 }
 
-/* ... zoom-out-mobiles-input-form ... */
-/* https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone */
-@supports (-webkit-overflow-scrolling: touch) {
-	input:active {
+/*
+### NOTE:
+### zoom-out-mobiles-input-form
+### SEE:
+### https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone
+*/
+@supports (-webkit-overflow-scrolling: touch)
+{
+  form input:active,
+	input:active
+  {
 		font-size: 16px !important;
 	}
 }
